[gd_scene load_steps=17 format=3 uid="uid://fuw2gcnxtofr"]

[ext_resource type="Script" uid="uid://djd1jf0c25twj" path="res://scenes/ui/layers_menu/layer_menu_row.gd" id="1_urd4n"]
[ext_resource type="Texture2D" uid="uid://bg8by04sgnnuc" path="res://assets/ui/Menu_Layers/sfondo_layer.png" id="3_h5ox3"]
[ext_resource type="Texture2D" uid="uid://cybpfg16atbrk" path="res://assets/placeholder/ui/livello_1_-_layer_0_rosa_layer_1_blu_con_spine_in_rosso_layer_2_giallo_porta_verde.webp" id="3_hbla2"]
[ext_resource type="Texture2D" uid="uid://f0cotns52koe" path="res://assets/ui/Menu_Layers/sfondo_layer_notavailable.png" id="3_osrn6"]
[ext_resource type="Texture2D" uid="uid://bylkduptfhnma" path="res://assets/ui/square.png" id="4_hbla2"]
[ext_resource type="Texture2D" uid="uid://qv74x523hlcq" path="res://assets/ui/eye_open.png" id="5_hbla2"]
[ext_resource type="Texture2D" uid="uid://cicu62skas0u" path="res://assets/ui/eye_closed.png" id="6_cqoqi"]
[ext_resource type="Script" uid="uid://osp4vxr48ts7" path="res://scenes/ui/clickable.gd" id="6_osrn6"]
[ext_resource type="Texture2D" uid="uid://dtf3bf6xw24er" path="res://assets/ui/rotation_arrow_left.png" id="7_oy1as"]
[ext_resource type="Texture2D" uid="uid://darshk2wb54ik" path="res://assets/ui/rotation_arrow_right.png" id="8_j5t7p"]
[ext_resource type="FontFile" uid="uid://c0jk4a3toofrt" path="res://assets/fonts/COMIC BOOK.OTF" id="9_j5t7p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_osrn6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqoqi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.46138418, 0.6352145, 0.66593987, 0.5294118)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_atvwj"]
resource_local_to_scene = true
bg_color = Color(0.12721047, 0, 0.7215379, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atvwj"]
size = Vector2(420, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5ox3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LayerMenuRow" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
offset_right = 420.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_osrn6")
script = ExtResource("1_urd4n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 1.0638298)
texture = ExtResource("3_h5ox3")
centered = false

[node name="Notaivailable" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.3685392, 1.4285715)
texture = ExtResource("3_osrn6")
centered = false

[node name="LayerMenuRow" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(420, 84)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="LayerDisplay" type="MarginContainer" parent="LayerMenuRow"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Texture" type="TextureRect" parent="LayerMenuRow/LayerDisplay"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_hbla2")
expand_mode = 5

[node name="Sprite2D" type="Sprite2D" parent="LayerMenuRow/LayerDisplay"]
position = Vector2(11.000001, 10)
scale = Vector2(0.46382976, 0.5)
texture = ExtResource("4_hbla2")
centered = false

[node name="MaskDisplay" type="MarginContainer" parent="LayerMenuRow"]
visible = false
custom_minimum_size = Vector2(200, 120)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="LayerMenuRow/MaskDisplay"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cqoqi")

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(108.8, 100)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_atvwj")
script = ExtResource("6_osrn6")

[node name="Disable" type="ColorRect" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
color = Color(0.42352942, 0.05490196, 0.050980393, 0.63529414)
script = ExtResource("6_osrn6")

[node name="Sprite2D2" type="Sprite2D" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer/Disable"]
scale = Vector2(0.46808517, 0.49541286)
texture = ExtResource("4_hbla2")
centered = false

[node name="MarginContainer2" type="MarginContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VisibilityContainer" type="MarginContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 13
theme_override_constants/margin_right = 13
script = ExtResource("6_osrn6")

[node name="VisibilityIcon" type="TextureRect" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/VisibilityContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_hbla2")
expand_mode = 3
stretch_mode = 5

[node name="VisibilityIconDisabled" type="TextureRect" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/VisibilityContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_cqoqi")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
theme_override_constants/separation = 8

[node name="Left" type="TextureRect" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_oy1as")
expand_mode = 1
script = ExtResource("6_osrn6")

[node name="Right" type="TextureRect" parent="LayerMenuRow/MaskDisplay/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_j5t7p")
expand_mode = 1
script = ExtResource("6_osrn6")

[node name="Spacer" type="Container" parent="LayerMenuRow"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="TextDisplay" type="VBoxContainer" parent="LayerMenuRow"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 5.0
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LayerMenuRow/TextDisplay"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LayerNumber" type="Label" parent="LayerMenuRow/TextDisplay/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_j5t7p")
theme_override_font_sizes/font_size = 26
text = "Layer 0"

[node name="Area2D" type="Area2D" parent="LayerMenuRow"]
position = Vector2(210, 64)
collision_layer = 16
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LayerMenuRow/Area2D"]
shape = SubResource("RectangleShape2D_atvwj")

[node name="Zoom" type="Node2D" parent="."]
visible = false

[node name="ZoomLayer" type="PanelContainer" parent="Zoom"]
offset_left = -43.0
offset_top = -235.0
offset_right = 177.0
offset_bottom = -15.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h5ox3")

[node name="ZoomLayerTexture" type="TextureRect" parent="Zoom/ZoomLayer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1

[node name="ZoomTimer" type="Timer" parent="Zoom"]
wait_time = 0.2
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="mouse_entered" from="LayerMenuRow/LayerDisplay" to="." method="_on_layer_display_mouse_entered"]
[connection signal="mouse_exited" from="LayerMenuRow/LayerDisplay" to="." method="_on_layer_display_mouse_exited"]
[connection signal="area_entered" from="LayerMenuRow/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="LayerMenuRow/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Zoom/ZoomTimer" to="." method="_on_zoom_timer_timeout"]
